<resources>
    <string name="app_name">QuenFutsalBooking</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="daftar">Daftar</string>
    <string name="full_name">Full Name</string>
    <string name="no_hp">No Handphone</string>
    <string name="sign_up">SIGN UP</string>
    <string name="email">Email</string>
    <string name="t_signup">Sudah Punya Akun ? Login</string>
    <string name="t_login">Belum Punya Akun ? Daftar</string>
    <string name="logout">Logout</string>
    <string name="lupa_password">Lupa Password ?</string>
    <string name="sebelumnya">Sebelumnya</string>
    <string name="Selanjutnya">selanjutnya</string>
</resources>