<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backg"
    android:paddingStart="10dp"
    android:paddingEnd="10dp"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/t1"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:src="@drawable/nama"
        android:layout_gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/t1"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:background="@drawable/layout1"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="Silahkan masukkan username dan password!"
            android:textColor="@color/light_black"
            android:textSize="15sp"
            android:layout_marginTop="20dp"/>

        <LinearLayout
            android:id="@+id/box_login"
            android:layout_width="300dp"
            android:layout_height="180dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ipt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_email"
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_person"
                    android:inputType="textEmailAddress"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ipt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:layout_marginBottom="8dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_password"
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_password"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_signup"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/login"/>

        <TextView
            android:id="@+id/txt_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/t_login"
            android:textStyle="italic|bold" />

        <TextView
            android:id="@+id/txt_forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lupa_password"
            android:textStyle="italic|bold"
            android:layout_marginTop="8dp"/>

    </LinearLayout>

    <ImageView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:src="@drawable/copyright"
        android:layout_gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>

    <ProgressBar
        android:id="@+id/pgbar_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="invisible"/>



</RelativeLayout>